--- a/TIY.Nuget/Web.config
+++ b/TIY.Nuget/Web.config
@@ -79,7 +79,7 @@
             Change the path to the packages folder. Default is ~/Packages.
             This can be a virtual or physical path.
         -->
-    <add key="packagesPath" value=""/>
+    <add key="packagesPath" value="~/App_Data/Packages"/>
     <!--
             Set allowOverrideExistingPackageOnPush to false if attempts to upload a package that already exists
             (same id and same version) should fail.
