--- a/TIY.Nuget/TIY.Nuget.csproj
+++ b/TIY.Nuget/TIY.Nuget.csproj
@@ -103,6 +103,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="App_Data\Packages\EmberJS.WebAPI.0.6.0.nupkg" />
+    <None Include="Properties\PublishProfiles\tiynuget.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -167,5 +169,4 @@
       start /MIN xcopy /s /y /R "$(OutDir)roslyn\*.*" "$(WebProjectOutputDir)\bin\Roslyn"
     </PostBuildEvent>
   </PropertyGroup>
-  
 </Project>
